--- a/ansible_pb_nxos/ansible.cfg
+++ b/ansible_pb_nxos/ansible.cfg
@@ -1,6 +1,10 @@
 [defaults]
 inventory=inventory
 host_key_checking = False
+remote_tmp = /tmp/${USER}/ansible
 
 [paramiko_connection]
 host_key_auto_add = True
+
+[persistent_connection]
+command_timeout = 80
