--- a/nxos_base_configs/ansible.cfg
+++ b/nxos_base_configs/ansible.cfg
@@ -5,7 +5,7 @@ gather_facts = no
 #remote_tmp = /tmp/${USER}/ansible
 
 [paramiko_connection]
-#host_key_auto_add = True
+host_key_auto_add = True
 
 [persistent_connection]
 command_timeout = 80
