--- a/nxos_base_configs/group_vars/cisco.yaml
+++ b/nxos_base_configs/group_vars/cisco.yaml
@@ -2,5 +2,5 @@
 provider_ssh:
   host: "{{ ansible_host }}"
   username: "{{ username }}"
-  username: "{{ password }}"
+  password: "{{ password }}"
   transport: cli
