--- a/nxos_base_configs_ip/ip.yaml
+++ b/nxos_base_configs_ip/ip.yaml
@@ -1,32 +1,17 @@
 ---
 - name: configure VLANS
   hosts: cisco
-  vars:
-    vlans:
-      - vlan_id: 550
-        admin_state: up
-        name: BLACK
-      - vlan_id: 551
-        admin_state: up
-        name: ORANGE
-
 
   tasks:
-    - name: Configure NEXUS VLANs
-      nxos_vlan:
-        provider: "{{ provider_ssh }}"
-        vlan_id: "{{ item.vlan_id  }}"
-        admin_state: "{{ item.admin_state  }}"
-        name: "{{ item.name  }}"
-      with_items: "{{ vlans }}"
 
-
-    - nxos_ip_interface: Configure NEXUS VLANs
+    - nxos_config:
         provider: "{{ provider_ssh }}"
-        interface: Ethernet1/1
-        version: v4
-        addr: "{{ ip_addr }}"
-        mask: 24
+        lines:
+          - "no switchport"
+          - "ip address {{ ip_addr }}"
+          - "no shutdown"
+        parents: interface ethernet1/1
+        match: strict
       notify: write mem
 
   handlers:
