--- a/nxos_base_configs_ip/host_vars/spine1.yaml
+++ b/nxos_base_configs_ip/host_vars/spine1.yaml
@@ -1,2 +1,12 @@
 ---
-ip_addr: 11.22.11.11/24
+loopback:
+  ip: 11.11.11.11
+LEAF:
+  0:
+    interface: 'Ethernet1/1'
+    ip: 11.22.11.11
+    subnet: 255.255.255.0
+  1:
+    interface: 'Ethernet1/1'
+    ip: 11.33.11.11
+    subnet: 255.255.255.0
