--- a/nxos_base_configs_ip/ip.yaml
+++ b/nxos_base_configs_ip/ip.yaml
@@ -1,23 +1,13 @@
 ---
-- name: configure VLANS
-  hosts: cisco
-
+- name: Prepare for configuration build
+  hosts: localhost
   tasks:
-
-    - nxos_config:
-        provider: "{{ provider_ssh }}"
-        lines:
-          - "no switchport"
-          - "ip address {{ ip_addr }}"
-          - "no shutdown"
-        parents: interface ethernet1/1
-        match: strict
-      notify: write mem
-
-  handlers:
-    - name: write mem
-      nxos_command:
-        provider: "{{ provider_ssh }}"
-        commands: copy run start
-      changed_when: True
-      tags: wr_mem
+  - shell: |
+      mkdir -p {{config_dir}}
+      rm -fr {{build_dir}}
+      mkdir -p {{build_dir}}
+      cd {{build_dir}}
+      mkdir {{groups['all']|join(' ')}}
+    args:
+      warn: false
+    changed_when: false
