--- a/nxos_base_configs_ip/deploy_scp.yml
+++ b/nxos_base_configs_ip/deploy_scp.yml
@@ -3,5 +3,5 @@
   hosts: nxos
   tasks:
     - nxos_config:
-        provider: "{{ ssh }}"
+        provider: "{{ provider_ssh }}"
         src: "./configs/{{ inventory_hostname }}.conf"
