bas and ospf done

--- a/nxos_base_configs_ip/compiled/spine1/interfaces.conf
+++ b/nxos_base_configs_ip/compiled/spine1/interfaces.conf
@@ -12,3 +12,7 @@ interface Ethernet1/2
  no switchport
  ip address 11.33.11.11 255.255.255.0
  no shut
+!
+interface loopback1
+ description RP
+ ip address 1.2.3.4 255.255.255.255
