--- a/nxos_base_configs_ip/configs/leaf1.conf
+++ b/nxos_base_configs_ip/configs/leaf1.conf
@@ -10,6 +10,29 @@ interface Ethernet1/1
 interface Ethernet1/3
  description SERVERS interface
  no switchport
- ip address 22.22.22.1 255.255.255.0
+ ip address 99.99.99.1 255.255.255.0
  no shut
 !
+feature pim
+!
+ip pim rp-address 1.2.3.4 group-list 224.0.0.0/4
+ip pim ssm range 232.0.0.0/8
+interface loopback0
+ ip pim sparse-mode
+
+
+ interface Ethernet1/1
+   ip pim sparse-mode
+
+feature ospf
+router ospf UNDERLAY_NET
+ router-id 22.22.22.22
+!
+interface Loopback0
+ ip router ospf UNDERLAY_NET area 0
+!
+
+ interface Ethernet1/1
+  ip router ospf UNDERLAY_NET area 0
+  medium p2p
+
