--- a/nxos_base_configs_ip/configs/spine1.conf
+++ b/nxos_base_configs_ip/configs/spine1.conf
@@ -12,3 +12,43 @@ interface Ethernet1/2
  no switchport
  ip address 11.33.11.11 255.255.255.0
  no shut
+!
+interface loopback1
+ description RP
+ ip address 1.2.3.4 255.255.255.255
+feature pim
+!
+ip pim rp-address 1.2.3.4 group-list 224.0.0.0/4
+ip pim ssm range 232.0.0.0/8
+interface loopback0
+ ip pim sparse-mode
+
+
+
+ interface Ethernet1/1
+   ip pim sparse-mode
+!
+ interface Ethernet1/2
+   ip pim sparse-mode
+!
+ interface loopback1
+   ip pim sparse-mode
+feature ospf
+router ospf UNDERLAY_NET
+ router-id 11.11.11.11
+!
+interface Loopback0
+ ip router ospf UNDERLAY_NET area 0
+!
+
+
+ interface Ethernet1/1
+  ip router ospf UNDERLAY_NET area 0
+  medium p2p
+!
+ interface Ethernet1/2
+  ip router ospf UNDERLAY_NET area 0
+  medium p2p
+!
+ interface loopback1
+  ip router ospf UNDERLAY_NET area 0
