--- a/nxos_base_configs_ip/roles/bgp/tasks/main.yaml
+++ b/nxos_base_configs_ip/roles/bgp/tasks/main.yaml
@@ -1,5 +1,5 @@
 ---
-- name: Baseline configuration - ospf
+- name: Baseline configuration - bgp
   template: src=bgp-config.j2 dest={{ build_dir }}/{{inventory_hostname}}/bgp.conf
   check_mode: no
   changed_when: false
