--- a/nxos_base_configs_ip/ip.yaml
+++ b/nxos_base_configs_ip/ip.yaml
@@ -16,9 +16,10 @@
   hosts: all
   connection: local
   roles:
-    - base
-    - ospf
-    - mcast
+    #    - base
+    #    - ospf
+    #    - mcast
+    - bgp
 
 - name: Assemble configurations
   hosts: all
